Develop (#15)
* Version promoted to 1.2.2-SNAPSHOT

* Added SwitchColorSet supported command

* Added dedicated interfaces for handlers, refined logging

* Fixed compilation issue

* Code refinement

* Added support for meter command

* New application commands added

improvements to the shell tool

* Release candidate 1.2.2

* Enchanced shell with multichannel associations

* JWZ pack is zipped now

* Controlled commands builders refactoring

* Controlled commands builders refactoring goes on

* Controlled commands builders refactoring goes on

* Controlled commands builders refactoring goes on

* Controlled commands builders refactoring goes on

* Code style reformat

* Refactoring supported commands approach

* Refactoring supported commands approach

* Refactoring supported commands approach

* Reworked byte buffering support

* Serial request builders rework

* Reworked serial requests to builders

* Serial request design based on ImmutableBuffer

* Decommissioned ViewBuffer

* Aligned class and method naming

* Cleaned up utility conventions

* ImmutableBuffer is an interface now

* Fixed bugs

* Improved tests

* Improved serial rxtx router logs

* Migrated to java 16

* Fixed command parse issue

* jenv version update

* Promote version 1.3.0